@@ -1,5 +1,8 @@
 2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkEvent.c: fix handling of ClientMessage handlers.
+	[Bug 1289565 983920]
+
 	* macosx/tkMacOSXEvent.h: define
 	kEventAppAvailableWindowBoundsChanged for OS X < 10.3.
 
